package pt.isep.psoft.alsafe.maintenancemanagement.domain;

public enum MaintenanceComponent {

    ENGINE,
    AIRFRAME,
    AVIONICS,
    INTERIOR,
    EXTERIOR
}